trying to fix overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -123,7 +123,7 @@ body {
   width:100%;
   height:auto;
   overflow-y:auto;
-  overflow-x: clip;
+  overflow-x: hidden;
   counter-reset: sidenote-counter;
   max-width: 100%;
   -ms-overflow-style: none;
@@ -857,7 +857,7 @@ h3{
       font-family: Terminal;
       font-weight: bold;
       font-size: 0.8rem;
-      padding: 0.4rem 0.5rem;
+      padding: 0.4rem 0.4rem;
       flex-wrap: wrap;
       line-height: 0.5rem;
       gap: 0.2rem;
